--- a/Form Validation project/stylecode.css
+++ b/Form Validation project/stylecode.css
@@ -26,4 +26,72 @@
             border-width: 10px;
             border-color: pink;
         }
+      
+        /* captcha css ------------start------------ */
+
+        #image{
+            margin-top: 10px;
+            box-shadow: 3px 5px  gray;
+            width: 60px;;
+            padding: 20px;
+            font-weight: 400;
+            padding-bottom: 0px;
+            height: 40px;
+            user-select: none;
+            text-decoration:line-through;
+            font-style: italic;
+            font-size: x-large;
+            border: red 2px solid;
+            margin-left: 10px;
+            
+        }
+        #user-input{
+            margin-left: 10px;
+            margin-top: auto;
+            width:auto;
+            margin-right: 5px;
+            padding: 5px;
+            padding-bottom: 0px;
+            height: 5px;
+            border: red 0px solid;
+        }
+        input{
+            border:1px black solid;
+        }
+        .inline{
+            display:inline-block;
+        }
+        
+#captchaicon{
+
+    height: 50px;
+    margin-top: 2px;
+    width: 60px;;
+    padding: 20px;
+    font-weight: 400;
+    padding-bottom: 0px;
+    user-select: none;
+    text-decoration:line-through;
+    font-style: italic;
+    font-size: x-large;
+    
+}
+
+#btn {
+    background-color: grey; 
+    border: none;
+    color: black;
+    padding: 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 20px;
+    margin: 6px 2px;
+    cursor: pointer;
+    width:100px;
+    border-radius: 12px;
+   
+  }
+
+
    
